kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: safechat-backend
  labels:
    app: safechat-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: safechat-backend
  template:
    metadata:
      labels:
        app: safechat-backend
    spec:
      containers:
        - name: safechat-backend
          image: zishann555/safechat-backend:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: safechat-backend-service
spec:
  selector:
    app: safechat-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
